# GetDiscogsVideos

./: CMakeLists.txt  CMakePresets.json  README.md
GetDiscogsVideos/: CMakeLists.txt  Constants.h  Functions.cpp  Functions.h  GetDiscogsVideos.cpp  GetDiscogsVideos.h  Progress.cpp  Progress.h
Scripts/: AB_GetDiscogsVideos.sh  PS_GetDiscogsVideos.ps1
docs/: Documentation.md
